@@ -91,8 +91,7 @@ sub _process_errors {
 	if (@record_errors) {
 		push @{$self->{'errors'}}, Data::MARC::Validator::Report::Plugin::Errors->new(
 			'errors' => \@record_errors,
-			# TODO process
-			'filters' => [],
+			'filters' => $self->{'filters'},
 			'record_id' => $record_id,
 		);
 	}
